import { Injectable, Inject, LoggerService, Logger } from '@nestjs/common';
import { ConfigService } from '@nestjs/config';
import { IAdNetworkAdapter } from '../core/ad-network-adapter.interface';
import { BaseAdNetworkClient } from '../core/base-ad-network.client';
import { DataMapperFactory } from '../../common/utils/data-mapper.factory';
import { AdNetworkType } from '../../common/enums';
import {
  InternalCampaignCreateDto,
  InternalCampaignUpdateDto,
  InternalCampaignDetailsDto,
  InternalCampaignResultDto,
  InternalAdSetUpdateDto,
  InternalAdSetDetailsDto,
  InternalAdSetResultDto,
  InternalCreativeUploadDto,
  InternalCreativeDetailsDto,
  InternalCreativeResultDto,
  InternalMetricsRequestParamsDto,
  InternalPerformanceMetricsResultDto,
  InternalAudienceSyncDto,
  InternalAudienceSyncStatusResultDto,
  InternalProductFeedSubmitDto,
  InternalFeedSubmissionStatusResultDto,
  ValidationResultDto,
  InternalCampaignDto,
  InternalCreativeDto,
  InternalProductFeedDto,
} from '../../dto/internal';
import { GoogleAdsApiConfig, AdNetworkConfig } from '../../../config/ad-network.config.interface';
// import { GoogleAdsApi, CampaignStatus as GoogleCampaignStatus } from 'google-ads-api'; // Hypothetical Google Ads SDK

@Injectable()
export class GoogleAdsAdapter implements IAdNetworkAdapter {
  private readonly googleConfig: GoogleAdsApiConfig;
  // private googleAdsClient: GoogleAdsApi; // Instance of actual Google Ads SDK client

  constructor(
    private readonly configService: ConfigService<AdNetworkConfig>,
    private readonly baseClient: BaseAdNetworkClient, // Assuming BaseAdNetworkClient is provided globally or in module
    private readonly dataMapperFactory: DataMapperFactory,
    @Inject(Logger) private readonly logger: LoggerService,
  ) {
    this.googleConfig = this.configService.get<GoogleAdsApiConfig>('google');
    if (!this.googleConfig) {
      throw new Error('Google Ads configuration not found');
    }
    // Initialize Google Ads SDK client here
    // this.googleAdsClient = new GoogleAdsApi({
    //   client_id: this.googleConfig.clientId,
    //   client_secret: this.googleConfig.clientSecret,
    //   developer_token: this.googleConfig.developerToken,
    //   refresh_token: this.googleConfig.refreshToken,
    //   login_customer_id: this.googleConfig.loginCustomerId,
    // });
    this.logger.setContext(GoogleAdsAdapter.name);
  }

  getNetworkType(): AdNetworkType {
    return AdNetworkType.GOOGLE_ADS;
  }

  async createCampaign(
    merchantId: string,
    campaignData: InternalCampaignCreateDto,
  ): Promise<InternalCampaignResultDto> {
    this.logger.log(
      `[GoogleAds] Creating campaign for merchant ${merchantId}: ${campaignData.name}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS); // Assume a GoogleAdsDataMapper exists
    // const googleCampaignData = mapper.mapToNetworkCampaignCreate(campaignData);

    try {
      // Example: Using BaseAdNetworkClient if Google Ads API is RESTful
      // const response = await this.baseClient.requestWithResilience(
      //   'POST',
      //   `${this.googleConfig.apiBaseUrl}/campaigns`, // Hypothetical endpoint
      //   googleCampaignData,
      //   { headers: { Authorization: `Bearer ${this.googleConfig.accessToken}` } }, // Hypothetical auth
      //   'googleAds.createCampaign',
      // );
      // return mapper.mapToInternalCampaignResult(response.data);

      // Placeholder for actual Google Ads API call using SDK
      this.logger.log(
        `[GoogleAds] Simulating API call to create campaign: ${JSON.stringify(
          campaignData,
        )}`,
      );
      // const createdGoogleCampaign = await this.googleAdsClient.campaigns.create(googleCampaignData);
      // const internalResult = mapper.mapToInternalCampaignResult(createdGoogleCampaign);
      // return internalResult;

      // Placeholder implementation
      await new Promise(resolve => setTimeout(resolve, 100)); // Simulate API call
      return {
        id: `google-campaign-${Date.now()}`,
        networkCampaignId: `gads-${Date.now()}`,
        status: campaignData.initialStatus, // Use the one from DTO
        name: campaignData.name,
        // ... other fields mapped from response
      };
    } catch (error) {
      this.logger.error(
        `[GoogleAds] Error creating campaign: ${error.message}`,
        error.stack,
      );
      // Map Google-specific error to a standardized internal error
      throw new Error(`Google Ads API Error: ${error.message}`); // Or a custom error class
    }
  }

  async updateCampaign(
    merchantId: string,
    campaignId: string,
    campaignUpdateData: InternalCampaignUpdateDto,
  ): Promise<InternalCampaignResultDto> {
    this.logger.log(
      `[GoogleAds] Updating campaign ${campaignId} for merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleCampaignUpdate = mapper.mapToNetworkCampaignUpdate(campaignUpdateData);
    // const response = await this.googleAdsClient.campaigns.update(campaignId, googleCampaignUpdate);
    // return mapper.mapToInternalCampaignResult(response);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: campaignId,
      networkCampaignId: `gads-${campaignId}`,
      status: campaignUpdateData.campaignStatus,
      name: campaignUpdateData.name,
    };
  }

  async getCampaign(
    merchantId: string,
    campaignId: string,
  ): Promise<InternalCampaignDetailsDto> {
    this.logger.log(
      `[GoogleAds] Getting campaign ${campaignId} for merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleCampaign = await this.googleAdsClient.campaigns.get(campaignId);
    // return mapper.mapToInternalCampaignDetails(googleCampaign);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: campaignId,
      networkCampaignId: `gads-${campaignId}`,
      name: 'Sample Google Campaign',
      status: AdNetworkType.GOOGLE_ADS, // Example status
      budget: 100.0,
      startDate: new Date().toISOString(),
      endDate: new Date(Date.now() + 30 * 24 * 60 * 60 * 1000).toISOString(),
      adNetwork: AdNetworkType.GOOGLE_ADS,
      merchantId: merchantId,
      // ... other fields
    };
  }

  async updateAdSet(
    merchantId: string,
    adSetId: string,
    adSetData: InternalAdSetUpdateDto,
  ): Promise<InternalAdSetResultDto> {
    this.logger.log(
      `[GoogleAds] Updating ad set ${adSetId} for merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleAdSetUpdate = mapper.mapToNetworkAdSetUpdate(adSetData);
    // const response = await this.googleAdsClient.adGroups.update(adSetId, googleAdSetUpdate); // Assuming ad sets are ad groups
    // return mapper.mapToInternalAdSetResult(response);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: adSetId,
      networkAdSetId: `gads-adset-${adSetId}`,
      name: adSetData.name,
      status: adSetData.adSetStatus,
    };
  }

  async getAdSet(
    merchantId: string,
    adSetId: string,
  ): Promise<InternalAdSetDetailsDto> {
    this.logger.log(
      `[GoogleAds] Getting ad set ${adSetId} for merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleAdSet = await this.googleAdsClient.adGroups.get(adSetId);
    // return mapper.mapToInternalAdSetDetails(googleAdSet);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: adSetId,
      networkAdSetId: `gads-adset-${adSetId}`,
      campaignId: 'related-campaign-id',
      name: 'Sample Google Ad Set',
      status: AdNetworkType.GOOGLE_ADS, // Example status
      budget: 50.0,
      // ... other fields
    };
  }

  async uploadCreative(
    merchantId: string,
    creativeData: InternalCreativeUploadDto,
  ): Promise<InternalCreativeResultDto> {
    this.logger.log(
      `[GoogleAds] Uploading creative for merchant ${merchantId}: ${creativeData.name}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleCreativeData = mapper.mapToNetworkCreativeUpload(creativeData);
    // const response = await this.googleAdsClient.assets.upload(googleCreativeData); // Example method
    // return mapper.mapToInternalCreativeResult(response);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: `google-creative-${Date.now()}`,
      networkCreativeId: `gads-creative-${Date.now()}`,
      name: creativeData.name,
      type: creativeData.type,
      assetUrl: creativeData.assetUrl || `http://cdn.example.com/gads-creative-${Date.now()}`,
    };
  }

  async getCreative(
    merchantId: string,
    creativeId: string,
  ): Promise<InternalCreativeDetailsDto> {
    this.logger.log(
      `[GoogleAds] Getting creative ${creativeId} for merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleCreative = await this.googleAdsClient.assets.get(creativeId);
    // return mapper.mapToInternalCreativeDetails(googleCreative);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: creativeId,
      networkCreativeId: `gads-creative-${creativeId}`,
      name: 'Sample Google Creative',
      type: AdNetworkType.GOOGLE_ADS, // Example type
      assetUrl: `http://cdn.example.com/gads-creative-${creativeId}`,
      metadata: { headline: 'Sample Headline', description: 'Sample Description' },
      adNetwork: AdNetworkType.GOOGLE_ADS,
      merchantId,
    };
  }

  async getPerformanceMetrics(
    merchantId: string,
    params: InternalMetricsRequestParamsDto,
  ): Promise<InternalPerformanceMetricsResultDto> {
    this.logger.log(
      `[GoogleAds] Getting performance metrics for merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleReportRequest = mapper.mapToNetworkMetricsRequest(params);
    // const report = await this.googleAdsClient.reports.get(googleReportRequest);
    // return mapper.mapToInternalPerformanceMetrics(report);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      metrics: [
        {
          campaignId: params.campaignIds?.[0] || 'google-campaign-1',
          networkCampaignId: `gads-${params.campaignIds?.[0] || 'campaign-1'}`,
          impressions: 1000,
          clicks: 100,
          spend: 50.0,
          conversions: 10,
          roas: 2.5,
          cpa: 5.0,
          date: params.startDate,
        },
      ],
    };
  }

  async syncAudience(
    merchantId: string,
    audienceData: InternalAudienceSyncDto,
  ): Promise<InternalAudienceSyncStatusResultDto> {
    this.logger.log(
      `[GoogleAds] Syncing audience for merchant ${merchantId}: ${audienceData.name}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleAudienceData = mapper.mapToNetworkAudienceSync(audienceData);
    // const response = await this.googleAdsClient.userLists.create(googleAudienceData); // Example method
    // return mapper.mapToInternalAudienceSyncStatus(response);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      audienceIdNetwork: `gads-audience-${Date.now()}`,
      syncStatus: AdNetworkType.GOOGLE_ADS, // Example status - needs mapping from common.v1.proto AudienceSyncStatus
      name: audienceData.name,
      type: audienceData.type,
      size: 0, // Placeholder
    };
  }

  async getAudienceSyncStatus(
    merchantId: string,
    audienceIdNetwork: string,
  ): Promise<InternalAudienceSyncStatusResultDto> {
    this.logger.log(
      `[GoogleAds] Getting audience sync status for ${audienceIdNetwork}, merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const response = await this.googleAdsClient.userLists.get(audienceIdNetwork);
    // return mapper.mapToInternalAudienceSyncStatus(response);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      audienceIdNetwork: audienceIdNetwork,
      syncStatus: AdNetworkType.GOOGLE_ADS, // Example status
      name: 'Sample Google Audience',
      type: AdNetworkType.GOOGLE_ADS, // Example type
      size: 10000, // Placeholder
    };
  }

  async submitProductFeed(
    merchantId: string,
    feedData: InternalProductFeedSubmitDto,
  ): Promise<InternalFeedSubmissionStatusResultDto> {
    this.logger.log(
      `[GoogleAds] Submitting product feed for merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const googleFeedData = mapper.mapToNetworkProductFeedSubmit(feedData);
    // // Google uses Merchant Center API for feeds
    // const response = await this.googleMerchantCenterClient.feeds.submit(googleFeedData);
    // return mapper.mapToInternalFeedSubmissionStatus(response);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      feedIdNetwork: `gmc-feed-${Date.now()}`,
      submissionStatus: AdNetworkType.GOOGLE_ADS, // Example status
      details: 'Submitted to Google Merchant Center (simulated)',
    };
  }

  async getProductFeedStatus(
    merchantId: string,
    feedIdNetwork: string,
  ): Promise<InternalFeedSubmissionStatusResultDto> {
    this.logger.log(
      `[GoogleAds] Getting product feed status for ${feedIdNetwork}, merchant ${merchantId}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.GOOGLE_ADS);
    // const response = await this.googleMerchantCenterClient.feeds.getStatus(feedIdNetwork);
    // return mapper.mapToInternalFeedSubmissionStatus(response);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      feedIdNetwork: feedIdNetwork,
      submissionStatus: AdNetworkType.GOOGLE_ADS, // Example status
      details: 'Processing in Google Merchant Center (simulated)',
    };
  }

  async validateCampaignData(
    merchantId: string,
    campaignData: InternalCampaignDto,
  ): Promise<ValidationResultDto[]> {
    this.logger.log(
      `[GoogleAds] Validating campaign data for merchant ${merchantId}`,
    );
    // Call Google Ads API validation endpoint or use SDK validation features
    // For example, a dry run of campaign creation.
    // const issues = await this.googleAdsClient.campaigns.validate(campaignData);
    // return issues.map(issue => ({ fieldPath: issue.field, message: issue.description, severity: issue.severity }));
    await new Promise(resolve => setTimeout(resolve, 100));
    const results: ValidationResultDto[] = [];
    if (!campaignData.name || campaignData.name.length < 5) {
      results.push({
        fieldPath: 'name',
        message: 'Campaign name must be at least 5 characters long for Google Ads.',
        severity: AdNetworkType.GOOGLE_ADS, // Example severity from common.v1.proto ValidationSeverity
      });
    }
    return results;
  }

  async validateCreativeData(
    merchantId: string,
    creativeData: InternalCreativeDto,
  ): Promise<ValidationResultDto[]> {
    this.logger.log(
      `[GoogleAds] Validating creative data for merchant ${merchantId}`,
    );
    // Call Google Ads API validation for assets/creatives
    await new Promise(resolve => setTimeout(resolve, 100));
    const results: ValidationResultDto[] = [];
    if (creativeData.type === AdNetworkType.GOOGLE_ADS /* e.g. CreativeType.VIDEO */ && (!creativeData.assetUrl || !creativeData.assetUrl.endsWith('.mp4'))) {
      results.push({
        fieldPath: 'assetUrl',
        message: 'Video creative for Google Ads must be a valid .mp4 URL.',
        severity: AdNetworkType.GOOGLE_ADS,
      });
    }
    return results;
  }

  async validateFeedData(
    merchantId: string,
    feedData: InternalProductFeedDto,
  ): Promise<ValidationResultDto[]> {
    this.logger.log(
      `[GoogleAds] Validating feed data for merchant ${merchantId}`,
    );
    // Use Google Merchant Center API for feed validation or dry run
    await new Promise(resolve => setTimeout(resolve, 100));
    const results: ValidationResultDto[] = [];
    if (feedData.format !== AdNetworkType.GOOGLE_ADS /* e.g. FeedFormat.XML */ && feedData.format !== AdNetworkType.GOOGLE_ADS /* e.g. FeedFormat.CSV */ ) {
        results.push({
            fieldPath: 'format',
            message: 'Google Ads (Merchant Center) typically expects XML or CSV feeds.',
            severity: AdNetworkType.GOOGLE_ADS,
        });
    }
    return results;
  }
}