import { Injectable, Inject, LoggerService, Logger } from '@nestjs/common';
import { ConfigService } from '@nestjs/config';
import { IAdNetworkAdapter } from '../core/ad-network-adapter.interface';
import { BaseAdNetworkClient } from '../core/base-ad-network.client';
import { DataMapperFactory } from '../../common/utils/data-mapper.factory';
import { AdNetworkType } from '../../common/enums';
import {
  InternalCampaignCreateDto,
  InternalCampaignUpdateDto,
  InternalCampaignDetailsDto,
  InternalCampaignResultDto,
  InternalAdSetUpdateDto,
  InternalAdSetDetailsDto,
  InternalAdSetResultDto,
  InternalCreativeUploadDto,
  InternalCreativeDetailsDto,
  InternalCreativeResultDto,
  InternalMetricsRequestParamsDto,
  InternalPerformanceMetricsResultDto,
  InternalAudienceSyncDto,
  InternalAudienceSyncStatusResultDto,
  InternalProductFeedSubmitDto,
  InternalFeedSubmissionStatusResultDto,
  ValidationResultDto,
  InternalCampaignDto,
  InternalCreativeDto,
  InternalProductFeedDto,
} from '../../dto/internal';
import { InstagramAdsApiConfig, AdNetworkConfig } from '../../../config/ad-network.config.interface';
// import { FacebookAdsApi, Campaign as FacebookCampaign } from 'facebook-nodejs-business-sdk'; // Hypothetical Facebook/Instagram SDK

@Injectable()
export class InstagramAdsAdapter implements IAdNetworkAdapter {
  private readonly instagramConfig: InstagramAdsApiConfig;
  // private facebookAdsClient: FacebookAdsApi; // Instance of actual Facebook Ads SDK client

  constructor(
    private readonly configService: ConfigService<AdNetworkConfig>,
    private readonly baseClient: BaseAdNetworkClient,
    private readonly dataMapperFactory: DataMapperFactory,
    @Inject(Logger) private readonly logger: LoggerService,
  ) {
    this.instagramConfig = this.configService.get<InstagramAdsApiConfig>('instagram');
    if (!this.instagramConfig) {
      throw new Error('Instagram Ads configuration not found');
    }
    // Initialize Facebook Ads SDK client here (Instagram Ads are managed via Facebook Marketing API)
    // FacebookAdsApi.init(this.instagramConfig.accessToken);
    // this.facebookAdsClient = FacebookAdsApi.getInstance();
    this.logger.setContext(InstagramAdsAdapter.name);
  }

  getNetworkType(): AdNetworkType {
    return AdNetworkType.INSTAGRAM_ADS;
  }

  async createCampaign(
    merchantId: string,
    campaignData: InternalCampaignCreateDto,
  ): Promise<InternalCampaignResultDto> {
    this.logger.log(
      `[InstagramAds] Creating campaign for merchant ${merchantId}: ${campaignData.name}`,
    );
    // const mapper = this.dataMapperFactory.getMapper(AdNetworkType.INSTAGRAM_ADS);
    // const facebookCampaignData = mapper.mapToNetworkCampaignCreate(campaignData);
    // Placeholder for actual Facebook/Instagram API call
    this.logger.log(
      `[InstagramAds] Simulating API call to create campaign: ${JSON.stringify(
        campaignData,
      )}`,
    );
    // const createdFbCampaign = await new FacebookCampaign(null, `act_${this.instagramConfig.adAccountId}`) // Ad Account ID needed
    //  .create(facebookCampaignData);
    // return mapper.mapToInternalCampaignResult(createdFbCampaign);
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: `insta-campaign-${Date.now()}`,
      networkCampaignId: `fb-insta-${Date.now()}`,
      status: campaignData.initialStatus,
      name: campaignData.name,
    };
  }

  async updateCampaign(
    merchantId: string,
    campaignId: string,
    campaignUpdateData: InternalCampaignUpdateDto,
  ): Promise<InternalCampaignResultDto> {
    this.logger.log(
      `[InstagramAds] Updating campaign ${campaignId} for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: campaignId,
      networkCampaignId: `fb-insta-${campaignId}`,
      status: campaignUpdateData.campaignStatus,
      name: campaignUpdateData.name,
    };
  }

  async getCampaign(
    merchantId: string,
    campaignId: string,
  ): Promise<InternalCampaignDetailsDto> {
    this.logger.log(
      `[InstagramAds] Getting campaign ${campaignId} for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: campaignId,
      networkCampaignId: `fb-insta-${campaignId}`,
      name: 'Sample Instagram Campaign',
      status: AdNetworkType.INSTAGRAM_ADS,
      budget: 120.0,
      startDate: new Date().toISOString(),
      endDate: new Date(Date.now() + 30 * 24 * 60 * 60 * 1000).toISOString(),
      adNetwork: AdNetworkType.INSTAGRAM_ADS,
      merchantId,
    };
  }

  async updateAdSet(
    merchantId: string,
    adSetId: string,
    adSetData: InternalAdSetUpdateDto,
  ): Promise<InternalAdSetResultDto> {
    this.logger.log(
      `[InstagramAds] Updating ad set ${adSetId} for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: adSetId,
      networkAdSetId: `fb-insta-adset-${adSetId}`,
      name: adSetData.name,
      status: adSetData.adSetStatus,
    };
  }

  async getAdSet(
    merchantId: string,
    adSetId: string,
  ): Promise<InternalAdSetDetailsDto> {
    this.logger.log(
      `[InstagramAds] Getting ad set ${adSetId} for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: adSetId,
      networkAdSetId: `fb-insta-adset-${adSetId}`,
      campaignId: 'related-fb-insta-campaign-id',
      name: 'Sample Instagram Ad Set',
      status: AdNetworkType.INSTAGRAM_ADS,
      budget: 60.0,
    };
  }

  async uploadCreative(
    merchantId: string,
    creativeData: InternalCreativeUploadDto,
  ): Promise<InternalCreativeResultDto> {
    this.logger.log(
      `[InstagramAds] Uploading creative for merchant ${merchantId}: ${creativeData.name}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: `insta-creative-${Date.now()}`,
      networkCreativeId: `fb-insta-creative-${Date.now()}`,
      name: creativeData.name,
      type: creativeData.type,
      assetUrl: creativeData.assetUrl || `http://cdn.example.com/fb-insta-creative-${Date.now()}`,
    };
  }

  async getCreative(
    merchantId: string,
    creativeId: string,
  ): Promise<InternalCreativeDetailsDto> {
    this.logger.log(
      `[InstagramAds] Getting creative ${creativeId} for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      id: creativeId,
      networkCreativeId: `fb-insta-creative-${creativeId}`,
      name: 'Sample Instagram Creative',
      type: AdNetworkType.INSTAGRAM_ADS,
      assetUrl: `http://cdn.example.com/fb-insta-creative-${creativeId}`,
      metadata: { caption: 'Awesome product!' },
      adNetwork: AdNetworkType.INSTAGRAM_ADS,
      merchantId,
    };
  }

  async getPerformanceMetrics(
    merchantId: string,
    params: InternalMetricsRequestParamsDto,
  ): Promise<InternalPerformanceMetricsResultDto> {
    this.logger.log(
      `[InstagramAds] Getting performance metrics for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      metrics: [
        {
          campaignId: params.campaignIds?.[0] || 'insta-campaign-1',
          networkCampaignId: `fb-insta-${params.campaignIds?.[0] || 'campaign-1'}`,
          impressions: 1200,
          clicks: 150,
          spend: 70.0,
          conversions: 12,
          roas: 2.8,
          cpa: 5.83,
          date: params.startDate,
        },
      ],
    };
  }

  async syncAudience(
    merchantId: string,
    audienceData: InternalAudienceSyncDto,
  ): Promise<InternalAudienceSyncStatusResultDto> {
    this.logger.log(
      `[InstagramAds] Syncing audience for merchant ${merchantId}: ${audienceData.name}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      audienceIdNetwork: `fb-insta-audience-${Date.now()}`,
      syncStatus: AdNetworkType.INSTAGRAM_ADS,
      name: audienceData.name,
      type: audienceData.type,
      size: 0,
    };
  }

  async getAudienceSyncStatus(
    merchantId: string,
    audienceIdNetwork: string,
  ): Promise<InternalAudienceSyncStatusResultDto> {
    this.logger.log(
      `[InstagramAds] Getting audience sync status for ${audienceIdNetwork}, merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      audienceIdNetwork: audienceIdNetwork,
      syncStatus: AdNetworkType.INSTAGRAM_ADS,
      name: 'Sample Instagram Audience',
      type: AdNetworkType.INSTAGRAM_ADS,
      size: 12000,
    };
  }

  async submitProductFeed(
    merchantId: string,
    feedData: InternalProductFeedSubmitDto,
  ): Promise<InternalFeedSubmissionStatusResultDto> {
    this.logger.log(
      `[InstagramAds] Submitting product feed for merchant ${merchantId}`,
    );
    // Facebook uses Catalogs for feeds
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      feedIdNetwork: `fb-catalog-feed-${Date.now()}`,
      submissionStatus: AdNetworkType.INSTAGRAM_ADS,
      details: 'Submitted to Facebook Catalog (simulated)',
    };
  }

  async getProductFeedStatus(
    merchantId: string,
    feedIdNetwork: string,
  ): Promise<InternalFeedSubmissionStatusResultDto> {
    this.logger.log(
      `[InstagramAds] Getting product feed status for ${feedIdNetwork}, merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    return {
      feedIdNetwork: feedIdNetwork,
      submissionStatus: AdNetworkType.INSTAGRAM_ADS,
      details: 'Processing in Facebook Catalog (simulated)',
    };
  }

  async validateCampaignData(
    merchantId: string,
    campaignData: InternalCampaignDto,
  ): Promise<ValidationResultDto[]> {
    this.logger.log(
      `[InstagramAds] Validating campaign data for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    const results: ValidationResultDto[] = [];
    // Example Instagram/Facebook specific validation
    if (campaignData.budget && campaignData.budget < 5) { // Facebook often has minimum budget requirements
        results.push({
            fieldPath: 'budget',
            message: 'Daily budget for Instagram/Facebook campaign must be at least $5 (example).',
            severity: AdNetworkType.INSTAGRAM_ADS, // Use common.v1.proto ValidationSeverity
        });
    }
    return results;
  }

  async validateCreativeData(
    merchantId: string,
    creativeData: InternalCreativeDto,
  ): Promise<ValidationResultDto[]> {
    this.logger.log(
      `[InstagramAds] Validating creative data for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
     const results: ValidationResultDto[] = [];
    // Example: Instagram stories have aspect ratio requirements
    // This would typically involve fetching image/video metadata if assetUrl is provided
    if (creativeData.type === AdNetworkType.INSTAGRAM_ADS /* e.g. CreativeType.IMAGE for Story */ ) {
        // Pseudo-logic: check creativeData.metadata for dimensions
        // if (metadata.width / metadata.height !== 9/16) {
        // results.push({
        //     fieldPath: 'asset',
        //     message: 'Instagram Story images should ideally be 9:16 aspect ratio.',
        //     severity: ValidationSeverity.WARNING,
        // });
        // }
    }
    return results;
  }

  async validateFeedData(
    merchantId: string,
    feedData: InternalProductFeedDto,
  ): Promise<ValidationResultDto[]> {
    this.logger.log(
      `[InstagramAds] Validating feed data for merchant ${merchantId}`,
    );
    await new Promise(resolve => setTimeout(resolve, 100));
    const results: ValidationResultDto[] = [];
    // Facebook catalog feeds have specific required columns (e.g., id, title, link, image_link, price)
    // This would involve parsing feedData.feedContent or fetching from feedData.feedUrl
    // if (!requiredColumnsPresentInFeed(feedData)) {
    //     results.push({
    //         fieldPath: 'feedContent',
    //         message: 'Feed is missing required columns for Facebook Catalogs (e.g., id, title, link).',
    //         severity: ValidationSeverity.ERROR,
    //     });
    // }
    return results;
  }
}